# pretty-wallpaper

./: .gitignore  CMakeLists.txt  README.md  main.cpp
images/: README.md
include/: CMakeLists.txt
include/glad/: glad.h
res/shaders/: add_circle.comp  clear_circles.comp  display_circles.comp  draw_texture.frag  draw_texture.vert  shader.frag  shader.vert
src/: CMakeLists.txt  circle_renderer.cpp  circle_renderer.hpp  opengl_utils.cpp  opengl_utils.hpp  renderer.cpp  renderer.hpp  triangle_renderer.cpp  triangle_renderer.hpp  utils.cpp  utils.hpp
src/glad/: CMakeLists.txt  glad.c
